Drop the blank line after every opening brace
A class or method starts with its first real line, not a padding line. The
Eclipse profile accepts both forms, so formatter:validate never flagged the
inconsistency and it spread as files were touched.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>